--- a/hairista/Controller/Services/ServicesViewController.xib
+++ b/hairista/Controller/Services/ServicesViewController.xib
@@ -16,6 +16,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ServicesViewController">
             <connections>
+                <outlet property="cllService" destination="GOO-k5-la3" id="J6a-fS-xFB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
